<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/nav_news" />
        <item
            android:id="@+id/nav_opinion"
            android:icon="@drawable/ic_opinion"
            android:title="@string/nav_opinion" />
        <item
            android:id="@+id/nav_sport"
            android:icon="@drawable/ic_sport"
            android:title="@string/nav_sport" />
        <item
            android:id="@+id/nav_lifestyle"
            android:icon="@drawable/ic_lifestyle"
            android:title="@string/nav_lifestyle" />
    </group>

    <item android:title="@string/nav_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_send" />
        </menu>
    </item>

</menu>
